# os_kernel_foundry

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  publish.yml
docs/: README.md  architecture.md  contributing.md  manual.md  modules.md  publishing.md  quickstart.md  testing-ci.md
src/: arch.rs  boot.rs  device.rs  ipc.rs  kernel.rs  lib.rs  memory.rs  scheduler.rs  sync.rs
