[package]
name = "os_kernel_foundry"
version = "0.1.0"
# Rust language edition (not the year of the project).
edition = "2024"
description = "A modular, heavily test-driven foundation crate for building Rust-based operating systems in Rust."
license = "MIT"
readme = "README.md"
keywords = ["os", "kernel", "no_std", "operating-system", "testing"]
categories = ["os", "embedded", "development-tools"]
homepage = "https://github.com/alisio85/os_kernel_foundry"
repository = "https://github.com/alisio85/os_kernel_foundry.git"
documentation = "https://github.com/alisio85/os_kernel_foundry/docs"

[dependencies]

[features]
# Enable `std` support for running tests and host-side experimentation.
std = []
